[metadata]
name = napari-LF-test
version = 0.0.1
author = Geneva Schlafly
author_email = gschlafly@uchicago.edu
url = https://github.com/PolarizedLightFieldMicroscopy/napari-LF-test
license = BSD-3-Clause
description = A temporary plugin to use with napari in the process of developing a light field imaging plugin
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
	Development Status :: 2 - Pre-Alpha
	Intended Audience :: Developers
	Framework :: napari
	Topic :: Software Development :: Testing
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Operating System :: OS Independent
	License :: OSI Approved :: BSD License
project_urls = 
	Bug Tracker = https://github.com/PolarizedLightFieldMicroscopy/napari-LF-test/issues
	Documentation = https://github.com/PolarizedLightFieldMicroscopy/napari-LF-test#README.md
	Source Code = https://github.com/PolarizedLightFieldMicroscopy/napari-LF-test
	User Support = https://github.com/PolarizedLightFieldMicroscopy/napari-LF-test/issues

[options]
packages = find:
python_requires = >=3.7
package_dir = 
	=src
# add your package requirements here
install_requires = 
	napari-plugin-engine>=0.1.4
	numpy
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
napari.manifest = 
	napari-LF-test = napari_lf_test:napari.yaml

[options.package_data]
napari_lf_test = napari.yaml

